Fix gamepod scheduler